--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "svelte-realworld-example-app",
   "version": "0.1.0",
-  "private": true,
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "svelte-loader": "^2.0.1",
+    "webpack": "^2.4.1"
+  }
 }
