--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "babel-preset-es2015": "^6.24.1",
     "svelte-loader": "^2.0.1",
     "webpack": "^2.4.1"
+  },
+  "dependencies": {
+    "history": "^4.6.1",
+    "svelte": "^1.18.1"
   }
 }
