--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "svelte-loader": "^2.0.1",
-    "webpack": "^2.4.1"
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "history": "^4.6.1",
     "svelte": "^1.18.1"
   }
